ZMETRIC-105 | Added yarn audit (#2)
* ZMETRIC-105 | Added yarn audit

* ZMETRIC-105 | Install latest version of Yarn

* ZMETRIC-104 | Test coverage

* Fail on coverage below 90%

* Add coveralls to project

* fix typo on after_script

* Update README.md

Add coverage badge

* ZMETRIC-101: Added propTypes to all components that didn't already have it

* ZMETRIC-105: Ran yarn upgrade to fix some of audit vulnerabilities

* ZMETRIC-105 | Added yarn audit

* ZMETRIC-105 | Install latest version of Yarn

* ZMETRIC-105: Ran yarn upgrade to fix some of audit vulnerabilities

* ZMETRIC-104 | Custom failure severity level for yarn audit

* ZMETRIC-104 | Excluded custom scripts from code coverage

* ZMETRIC-104 | Audit script in package.json + run custom audit script on CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,20 @@
 language: node_js
 node_js:
   - "stable"
+before_install:
+  - curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version 1.15.2
+  - export PATH=$HOME/.yarn/bin:$PATH
 cache:
+  yarn: true
   directories:
     - node_modules
 script:
+  - yarn run audit # customised yarn audit
   - yarn build
   - yarn test-coverage
   - yarn lint
 after_script:
-  - COVERALLS_REPO_TOKEN=$coveralls_repo_token npm run coveralls
+  - COVERALLS_REPO_TOKEN=$coveralls_repo_token npm run coveralls # send code coverage to coveralls
 deploy:
   provider: pages
   skip_cleanup: true
